

using UnityEngine;

public class PlayerAnimation : MonoBehaviour
{
    [Header("References")]
    public Animator animator;
    public readonly string MOVE_PARAM = "Move";
    public readonly string FIRING_PARAM = "Firing Rifle";
    public readonly string AIM_PARAM = "isAiming";
    public readonly string AIM_WALK_PARAM = "Rifle Aim Idle"; 
    public readonly string WEAPON_STATE_PARAM = "hasWeapon"; 
    public readonly string DEATH_ANIM_PARAM = "Death"; 
    
       
}
